Version 0.2.0
-------------
+ -i/--in to get input when piped

Version 0.1.0
-------------
+   editing new remindmes over several lines with help of `:end`
    and keyboard interrupt.
+   allow removing all the remindmes at once with new CLI option `-Ra`
=   too much is no longer used in output.

Version 0.0.3
--------------
=   fixed missing parameter while adding a remindme from commandline.

Version 0.0.2
--------------
=   -r/--remove failing to remove remindme, fixed.
=   typo in README, fixed.
+   keywords and content stored in sqlite3 database.